<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--    <group android:checkableBehavior="single">-->
    <item
        android:id="@+id/menu_scan"
        android:icon="@mipmap/icon_scan"
        android:title="@string/string_menu_scan" />
    <item
        android:id="@+id/menu_switch_name"
        android:icon="@mipmap/setting"
        android:title="@string/string_menu_switch_account" />
    <item
        android:id="@+id/menu_change_pwd"
        android:icon="@mipmap/icon_password"
        android:title="@string/string_menu_change_password" />
    <item
        android:id="@+id/menu_update_app"
        android:icon="@mipmap/icon_update"
        android:title="@string/string_menu_update" />
    <item
        android:id="@+id/menu_version"
        android:icon="@mipmap/icon_version"
        android:title="@string/string_menu_version" />
    <!--    </group>-->
</menu>